# notifyme

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  NotifyMe.spec  README.md  RELEASE_CHECKLIST.md  blink_reminder.py  build.bat  build.ps1  cSpell.json  config.json  help.html  notifyme.py  pyproject.toml  run.bat  run_tests.bat  setup.bat  test_pystray_callbacks.py
.agents/workflows/: python_usage.md
.github/: copilot-instructions.md
docs/: _config.yml  configuration.md  index.md  installation.md  troubleshooting.md  usage.md
help/: index.html
notifyme_app/: README.md  __init__.py  app.py  config.py  constants.py  logger.py  medicine.py  medicine_ui.py  medicine_ui_standalone.py  menu.py  notifications.py  system.py  timers.py  tray_backend.py  tts.py  updater.py  utils.py
scripts/: README.md  build.bat  build.ps1  build.sh  check_version.py  run.bat  run.ps1  run_tests.bat  run_tests.ps1  setup.bat  setup.ps1
specs/: MEDICINE_COMPLETE_SUMMARY.md  MEDICINE_FEATURE.md  MEDICINE_MENU_INTEGRATION.md  MEDICINE_UI_DIALOG.md  RELEASE_CHECKLIST.md  linux_build_support.md
tests/: repro_toast.py  test_app_runtime.py  test_menu.py  test_notifications.py  test_notifyme.py  test_notifyme_tts_sounds.py  test_pystray_callbacks.py  test_system.py  test_tray_backend.py  test_tts.py  verify_fix.py  verify_paused_menu.py
