[project]
name = "notifyme"
version = "0.1.0"
description = "Windows desktop application that reminds users to blink their eyes every 20 minutes."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "plyer>=2.1.0",
    "win10toast>=0.9",
    "setuptools", 
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["blink_reminder"]
